# freally-studio

./: .gitignore  .gitmodules  LICENSE  New Text Document.txt  PLAN.md  QA_VERIFICATION_REPORT.md  QUICK_START.md  README.md  README_FINAL.md  README_SIMPLE.md  SETUP_GUIDE.md  _expand_data_part1.json  _fast_lang_audit.mjs  _patch_i18n.js  ar-audit-report.md  assemble_es.js  az-audit-report.md  caesura-audit-report.md  check-caesura-all.js  check-uniqueness.js  country-audit-report.md  de-audit-report.md  dedup-all-locales.js  edm-audit-report.md  electron-builder.yml  es-audit-report.md  et-audit-report.md  fi-audit-report.md  fix_backticks.py  fix_fallbacks.py  folk-audit-report.md  fr-audit-report.md  gen-part1.js  gospel-audit-report.md  hi-audit-report.md  hip-hop-audit-report.md  hu-audit-report.md  index.html  indie-audit-report.md  it-audit-report.md  (+22 more)
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  pages.yml  release.yml
collab/: PeerManager.js  PeerProtocol.js  Room.js  useCollaboration.js
docs/: CHANGELOG.md  documentation.html  documents.html  index.html  native-build-setup.md  styles.css  ui-design-language.md  ui-migration-list.md
electron/: audioCaptureBridge.js  main.js  preload.js  transportClock.js  vst3HostBridge.js  vst3Scanner.js
native/: CMakeLists.txt  build-addon.js  detect-cmake.js  package-lock.json  package.json
native/audio_capture/: CMakeLists.txt  build-addon.js  package-lock.json  package.json
native/audio_capture/src/: audio_capture.cpp  audio_capture.h  napi_bindings.cpp  ring_buffer.h
native/src/: audio_buffer.cpp  audio_buffer.h  midi_event_queue.h  napi_bindings.cpp  napi_plugin_wrapper.cpp  napi_plugin_wrapper.h  parameter_queue.h  plugin_instance.cpp  plugin_instance.h  process_context.h  vst3_host.cpp  vst3_host.h
public/: factory-manifest.json  recording-processor.js
public/mobile-app/: app.js  index.html  manifest.json  style.css  sw.js
public/worklets/: capture-ring-reader.js  vst3-output-processor.js
scripts/: check-raw-colors.js  generate-phrase-banks.cjs  generate-translations.cjs  master-i18n-part2.js  master-i18n-part3.js  master-i18n-part4.js  master-i18n.js  propagate-mobilelink-keys.cjs  propagate-new-keys.cjs  propagate-octave-key.cjs  propagate-pianoroll-keys.cjs  propagate-remaining-keys.cjs  propagate-togglepower.cjs  propagate-tooltip-keys.cjs  rebuild-native.js  render-factory-packs.js  verify-keys.cjs
scripts/phrase-banks/: ENGLISH-REFERENCE.md  create-ar-shared.js  create-ko-shared.js  create-ru-shared.js  generate.cjs  shared.cjs  translate.cjs
src/: App.css  ArrangementIntelligencePanel.jsx  ArrangementMixer.jsx  ArrangementTimeline.jsx  ArrangementTimeline.jsx.bak  ArrangementViewEnhanced.jsx  AudioAnalyzer.js  AudioClipEditor.js  AudioEngine.js  AudioExporter.js  AudioExporterEnhanced.js  AudioRecorder.js  Bass808Panel.jsx  BeatEnergyPanel.jsx  Browser.jsx  BrowserEnhanced.jsx  ChordAwareGenerator.js  ChordGenerator.css  ChordGenerator.jsx  ChordGeneratorComplete.jsx  ChordGeneratorEnhanced.jsx  CpuMeter.jsx  DetailPanel.jsx  DetailPanelEffectCard.jsx  DrumGenerator.jsx  DrumGeneratorEnhanced.jsx  DrumSampleEditor.jsx  DrumSynthEngine.js  DrumSynthStudio.css  DrumSynthStudio.jsx  EffectVisualizers.jsx  EffectsRack.jsx  ExportDialog.css  ExportDialog.jsx  FileExplorerPanel.css  FileExplorerPanel.jsx  FileExplorerPanelEnhanced.jsx  FolderAnalyzer.js  FolderSelectorDialog.css  FolderSelectorDialog.jsx  (+110 more)
src/analytics/: HitProbabilityEngine.js
src/central/: CentralPanelModal.jsx  panelI18n.js
src/collab/: CollabPanel.jsx  CursorMap.jsx  DelegationStore.js  GoogleAuth.jsx  LockedOverlay.jsx  PTTButton.jsx  PeerManager.js  PeerProtocol.js  Room.js  TabGuard.jsx  TimeTracker.js  Toast.jsx  VoiceChatEngine.js  VoiceChatMeter.jsx  useCollaboration.js
src/components/: AdaptiveMixPanel.jsx  CounterMelodyPanel.jsx
src/domain/: chords.js  chordsExpansion2.js  domain.test.js  domainHelpers.js  genres.js  index.js  keys.js  moods.js  scales.js  voicings.js
src/effects/: AudioEffect.js  AutoPan.js  BitCrusher.js  Cabinet.js  Chorus.js  Compressor.js  DeEsser.js  Delay.js  Distortion.js  EQEight.js  Echo.js  EffectsChain.js  EffectsManager.js  Flanger.js  FrequencyShifter.js  Gate.js  GlueCompressor.js  HalfTime.js  Limiter.js  LoomSauce.js  MasteringRack.js  MultibandCompressor.js  Phaser.js  Reverb.js  RingModulator.js  Saturation.js  SidechainCompressor.js  SoftClipper.js  StereoWidener.js  Tape.js  TransientShaper.js  Tremolo.js  Tuner.js  Utility.js  Vinyl.js  Vocoder.js  effectParamDefs.js  effectRegistry.js
src/euclidean/: EuclideanPanel.jsx
src/i18n/: I18nContext.jsx  index.js
src/lyrics/: HookOptimizer.js  LyricEngineTab.jsx  LyricsTab.jsx  ProsodyAlignEngine.js  RecordModePanel.jsx  Teleprompter.jsx
src/mobilelink/: MobileLinkButton.jsx  MobileLinkEngine.js  MobileLinkModal.jsx  MobileLinkProtocol.js  QRCodeCanvas.js  useMobileLink.js
src/packfactory/: PackFactoryPanel.jsx  PackNaming.js  PackRenderer.js  packFactory.test.js  packNaming.test.js  packRenderer.test.js
(+277 files in other folders)
